2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	* headers.mk, tests/unit_test/unit-tests.mk: Regen.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Exercise the Fast Fourier Transform.

	* tests/transform/fft.cc: Fix the path to the input image.
	* tests/transform/Makefile.am
	(check_PROGRAMS) [HAVE_FFTW3]: Add fft.
	(fft_SOURCES, fft_CPPFLAGS, fft_LDFLAGS) [HAVE_FFTW3]: New.
	(MOSTLYCLEANFILES): New.

2012-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Fix the Fast Fourier Transform.

	* mln/transform/fft.hh
	(mln::transform::fft<T, internal::fft_real>::fft):
	Properly initialize the plan of the inverse transform using
	fftw_plan_dft_c2r_2d.
	(mln::transform::fft<T, internal::fft_real>::transform_inv):
	Use the entire complex values (not just their real parts) to
	compute the inverse transform.
	(mln::transform::class fft<T, internal::fft_cplx>::fft):
	Call the proper function (fftw_plan_dft_2d) to create the plan of
	the inverse transform.
	Switch the input and the output so that the inverse transform uses
	the right images.

2012-10-09  Alexandre Abraham  <abraham@lrde.epita.fr>

	Import the FFTW-based Fast Fourier Transform.

	* mln/transform/fft.hh,
	* tests/transform/fft.cc:
	New.
	Imported from the old directory sanbox/abraham/.

2013-08-23  Roland Levillain  <roland@lrde.epita.fr>

	Fix a couple of Milena tests.

	* tests/accu/compute.cc: Correction the checked assertion.
	* tests/value/scalar.cc: Remove this (non-relevant) test.

2013-08-23  Roland Levillain  <roland@lrde.epita.fr>

	* mln/data/transform: Remove (empty) file.

2013-08-23  Roland Levillain  <roland@lrde.epita.fr>

	Distribute all Milena test images.

	* tests/Makefile.am (EXTRA_DIST): Add img/example-0.ppm,
	img/example-1.ppm, img/example-2.ppm and img/example-3.ppm.

2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	Improve Milena's mln/fun/v2v/rgb8_to_rgbn.hh.

	* mln/fun/v2v/rgb8_to_rgbn.hh: Turn precondition into a static
	assertion.
	Remove (dead) debugging code.